<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>interview-kb</artifactId>

  <build>
    <plugins>
      <!-- Report-only: never fails the build, just prints violations on every `mvn verify`. -->
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <failOnViolation>false</failOnViolation>
          <failsOnError>false</failsOnError>
          <violationSeverity>warning</violationSeverity>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <id>checkstyle-check</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.6.0</version>
      </plugin>

      <plugin>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <failOnViolation>false</failOnViolation>
          <printFailingErrors>true</printFailingErrors>
          <rulesets>
            <ruleset>category/java/bestpractices.xml</ruleset>
            <ruleset>category/java/errorprone.xml</ruleset>
            <ruleset>category/java/design.xml</ruleset>
          </rulesets>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <id>pmd-check</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.26.0</version>
      </plugin>

      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <!-- Spring Boot entry points and pure bean-wiring config: no branching logic. -->
            <exclude>**/*Application.class</exclude>
            <exclude>**/config/**</exclude>
            <!-- Plain data-carrier records: no behavior beyond generated accessors. -->
            <exclude>**/dto/**</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>jacoco-prepare-agent</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>jacoco-report</id>
            <phase>test</phase>
          </execution>
          <!-- All 3 modules clear 80% instruction coverage as of this writing; fails the
               build on `mvn verify` if a future change drops any module below it. -->
          <execution>
            <configuration>
              <haltOnFailure>true</haltOnFailure>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <minimum>0.80</minimum>
                      <value>COVEREDRATIO</value>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <id>jacoco-check</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.13</version>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>spring-ai-bom</artifactId>
        <groupId>org.springframework.ai</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring-ai.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <description>IT interview knowledge base — parent POM</description>
  <groupId>com.interviewkb</groupId>

  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>shared</module>
    <module>view-app</module>
    <module>ingest-app</module>
    <module>ai-view</module>
  </modules>

  <name>Interview Knowledge Base</name>

  <packaging>pom</packaging>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.4.13</version>
  </parent>

  <properties>
    <commonmark.version>0.29.0</commonmark.version>
    <java.version>21</java.version>
    <postgresql.version>42.7.13</postgresql.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>

    <!-- SonarCloud: adjust to match whatever org/project you actually create there. -->
    <sonar.organization>posseidon</sonar.organization>
    <sonar.projectKey>posseidon_interview-kb</sonar.projectKey>
    <spring-ai.version>1.1.8</spring-ai.version>
  </properties>

  <version>1.1.0-SNAPSHOT</version>

</project>
